src/ui/snapshots/mathypad__ui__tests__welcome_dialog_first_run.snap
---
source: src/ui/tests.rs
expression: output
---
"                                                                                                                        "
"                                                                                                                        "
"          ┌ Welcome to mathypad v1.0.0 ──────────────────────────────────────────────────────────────────────┐          "
"          │Welcome to mathypad! Thank you for trying it out.                                                 │          "
"          │                                                                                                  │          "
"          │What's in this version:                                                                           │          "
"          │                                                                                                  │          "
"          │## [1.0.0] - 2024-01-01                                                                           │          "
"          │                                                                                                  │          "
"          │### 🤖 AI Assisted                                                                                │          " Hidden by multi-width symbols: [(16, " ")]
"          │                                                                                                  │          "
"          │- Add welcome screen for new versions                                                             │          "
"          │- Implement scrollable changelog display                                                          │          "
"          │- Add version tracking functionality                                                              │          "
"          │                                                                                                  │          "
"          │### 👤 Artisanally Crafted                                                                        │          " Hidden by multi-width symbols: [(16, " ")]
"          │                                                                                                  │          "
"          │- Fix UI layout bugs                                                                              │          "
"          │- Improve error handling                                                                          │          "
"          │- Update documentation                                                                            │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │↑↓ scroll  Enter or Esc close                                                                     │          "
"          │                                                                                                  │          "
"          └──────────────────────────────────────────────────────────────────────────────────────────────────┘          "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
