src/ui/snapshots/mathypad__ui__tests__welcome_dialog_minimal_content.snap
---
source: src/ui/tests.rs
expression: output
---
"                                                                                                                        "
"                                                                                                                        "
"          ┌ Welcome to mathypad v1.0.1 ──────────────────────────────────────────────────────────────────────┐          "
"          │Welcome! You've updated from v1.0.0 to v1.0.1                                                     │          "
"          │                                                                                                  │          "
"          │What's new:                                                                                       │          "
"          │                                                                                                  │          "
"          │## [1.0.1] - 2024-01-02                                                                           │          "
"          │                                                                                                  │          "
"          │- Quick bug fix                                                                                   │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │                                                                                                  │          "
"          │↑↓ scroll  Enter or Esc close                                                                     │          "
"          │                                                                                                  │          "
"          └──────────────────────────────────────────────────────────────────────────────────────────────────┘          "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
