src/ui/snapshots/mathypad__ui__tests__welcome_dialog_upgrade.snap
---
source: src/ui/tests.rs
expression: output
---
"                                                                                                                        "
"                                                                                                                        "
"          ┌ Welcome to mathypad v1.1.0 ──────────────────────────────────────────────────────────────────────┐          "
"          │Welcome! You've updated from v1.0.0 to v1.1.0                                                     █          "
"          │                                                                                                  █          "
"          │What's new:                                                                                       █          "
"          │                                                                                                  █          "
"          │## [1.1.0] - 2024-02-01                                                                           █          "
"          │                                                                                                  █          "
"          │### 🤖 AI Assisted                                                                                █          " Hidden by multi-width symbols: [(16, " ")]
"          │                                                                                                  █          "
"          │- Add new calculation features                                                                    █          "
"          │- Improve unit conversion accuracy                                                                █          "
"          │- Enhanced TUI responsiveness                                                                     █          "
"          │                                                                                                  █          "
"          │### 👤 Artisanally Crafted                                                                        █          " Hidden by multi-width symbols: [(16, " ")]
"          │                                                                                                  █          "
"          │- Performance optimizations                                                                       █          "
"          │- Bug fixes in expression parser                                                                  █          "
"          │- Updated dependencies                                                                            █          "
"          │                                                                                                  █          "
"          │## [1.0.0] - 2024-01-01                                                                           █          "
"          │                                                                                                  ░          "
"          │                                                                                                  ░          "
"          │↑↓ scroll  Enter or Esc close                                                                     ░          "
"          │(1/5)                                                                                             ░          "
"          └──────────────────────────────────────────────────────────────────────────────────────────────────┘          "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
